// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton component sanity matches default snapshot 1`] = `
.c1 {
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: primary;
  background-color: transparent;
  font-size: inherit;
  height: 48px;
  border: none;
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  font-weight: 600;
  font-size: 1rem;
  min-width: 3rem;
}

.c0 {
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
  background-color: black;
}

.c0:hover {
  background-color: #191919;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c0:active {
  background-color: #000;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 > svg {
  display: block;
}

.c0 > svg:first-child {
  margin-left: -1rem;
  margin-right: .5rem;
}

.c0 > svg:last-child {
  margin-left: .5rem;
  margin-right: -1rem;
}

.c0 > svg:first-child:last-child {
  margin: 0;
}

.c0 {
  background-color: transparent;
  box-shadow: none;
}

.c0:hover {
  color: #333;
  background-color: transparent;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
}

.c0:active {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
}

<button
  class="c0 c1"
  color="primary"
  font-size="inherit"
  font-weight="600"
  height="48px"
  type="button"
>
  
</button>
`;

exports[`TextButton component sanity matches themed snapshot 1`] = `
.c2 {
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #4E3FCE;
  background-color: transparent;
  font-size: inherit;
  height: 48px;
  border: none;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  font-weight: 600;
  font-size: 1rem;
  min-width: 3rem;
}

.c1 {
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
  background-color: #4E3FCE;
}

.c1:hover {
  background-color: #5f52d2;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:active {
  background-color: #4638b9;
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c1 > svg {
  display: block;
}

.c1 > svg:first-child {
  margin-left: -1rem;
  margin-right: .5rem;
}

.c1 > svg:last-child {
  margin-left: .5rem;
  margin-right: -1rem;
}

.c1 > svg:first-child:last-child {
  margin: 0;
}

.c1 {
  background-color: transparent;
  box-shadow: none;
}

.c1:hover {
  color: #7165d7;
  background-color: transparent;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
}

.c1:active {
  color: #3e32a4;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <button
    class="c1 c2"
    color="primary"
    font-size="inherit"
    font-weight="600"
    height="48px"
    type="button"
  >
    
  </button>
</div>
`;
